change NewClient to TypedClient
