# docs/swagger.json
@@ -4,216 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/lecturer": {
-            "get": {
-                "description": "Get all Lecturer",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Lecturer"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Lecturer"
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Get all Lecturer",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Lecturer"
-                ],
-                "parameters": [
-                    {
-                        "description": "Lecturer information",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Lecturer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Lecturer created successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/student/": {
-            "get": {
-                "description": "Get all students",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Student"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Student"
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create a new student",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Student"
-                ],
-                "parameters": [
-                    {
-                        "description": "Student object",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Student"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Student created successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/student/{student_id}": {
-            "get": {
-                "description": "Get student by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Student"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Student ID",
-                        "name": "student_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Student"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update student by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Student"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Student ID",
-                        "name": "student_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Student object",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Student"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Student updated successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete student by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Student"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Student ID",
-                        "name": "student_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Student deleted successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/subject/": {
             "get": {
                 "description": "Get all Subject",
@@ -270,7 +60,7 @@
                 }
             }
         },
-        "/subject/{subject_id}": {
+        "/subject/{document_id}": {
             "get": {
                 "description": "Get subject by ID",
                 "consumes": [
@@ -285,8 +75,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Subject ID",
-                        "name": "subject_id",
+                        "description": "document_id of the subject to be deleted",
+                        "name": "document_id",
                         "in": "path",
                         "required": true
                     }
@@ -300,6 +90,37 @@
                     }
                 }
             },
+            "delete": {
+                "description": "Delete subject by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Subject"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "document_id of the subject to be deleted",
+                        "name": "document_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Subject deleted successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/subject/{subject_id}": {
             "put": {
                 "description": "Update subject by ID",
                 "consumes": [
@@ -314,8 +135,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Subject ID",
-                        "name": "subject_id",
+                        "description": "document_id of the subject to be deleted",
+                        "name": "document_id",
                         "in": "path",
                         "required": true
                     },
@@ -337,64 +158,10 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "description": "Delete subject by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Subject"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Subject ID",
-                        "name": "subject_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Subject deleted successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
             }
         }
     },
     "definitions": {
-        "model.Lecturer": {
-            "type": "object",
-            "properties": {
-                "lecturer_id": {
-                    "type": "string"
-                },
-                "lecturer_name": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.Student": {
-            "type": "object",
-            "properties": {
-                "student_id": {
-                    "type": "string"
-                },
-                "student_name": {
-                    "type": "string"
-                },
-                "year_started": {
-                    "type": "integer"
-                }
-            }
-        },
         "model.Subject": {
             "type": "object",
             "properties": {
