# routes/student/student.go
@@ -1,23 +1,21 @@
 // routes/student/student.go
 package student
 
-import (
-	sc "vcs_backend/go-elasticsearch/controller/student"
+// import (
+// 	"github.com/gin-gonic/gin"
+// )
 
-	"github.com/gin-gonic/gin"
-)
+// func SetupRouter(r *gin.RouterGroup) {
+// 	// @BasePath /api/v1/student
+// 	// Student godoc
+// 	student := r.Group("/student")
+// 	{
 
-func SetupRouter(r *gin.RouterGroup) {
-	// @BasePath /api/v1/student
-	// Student godoc
-	student := r.Group("/student")
-	{
+// 		student.GET("/", sc.ListStudent)
+// 		student.POST("/", sc.CreateStudent)
 
-		student.GET("/", sc.ListStudent)
-		student.POST("/", sc.CreateStudent)
-
-		student.GET("/:student_id", sc.GetStudentById)
-		student.DELETE("/:student_id", sc.DeleteStudentById)
-		student.PUT("/:student_id", sc.UpdateStudentById)
-	}
-}
+// 		student.GET("/:student_id", sc.GetStudentById)
+// 		student.DELETE("/:student_id", sc.DeleteStudentById)
+// 		student.PUT("/:student_id", sc.UpdateStudentById)
+// 	}
+// }
